--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
  <!-- Navbar -->
  <nav class="navbar navbar-expand-lg mb-0 fixed-top bg-light">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="index.html">
      Saketh Vangala
   </a>
   <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
   <!-- My Intro -->
   <div class="container mw-75 ">
       <p>I am a developer and programmer, born and raised in Telangana, India currently pursuing my <strong>Masters in Computer Science</strong> from <a href="https://www.ncsu.edu/"><strong>North Carolina State University</a>, USA</strong>. I've Completed my Bachelor's from <a href="http://www.vnrvjiet.ac.in/">VNRVJIET</a>, India in the stream of Information Technology. I'm up for challenges which pushes me into exploration to learn new things. Recently, I won 1ˢᵗ prize in <strong>MY BIG IDEA COMPETITION</strong> for presenting a societal impact project.</p>
-      <p>I believe in practical learning which strives me to relate my skills with real-time situations which enables me to gain hands-on experience. My most recent projects were related to <strong>COVID-19</strong> where I worked on bulding websites and a website <strong><a href="http://www.covidcenters.in/" target="_blank">COVID 19 Testing Centers</a></strong> is released through <strong><a href="https://telanganatoday.com/vnrvjiet-students-develop-covid-information-website" target="_blank">Press Conference</a></strong> in 7 newspapers of Telangana.  </p>
+      <p>I believe in practical learning, which drives me to relate my skills to real-time situations, enabling me to gain hands-on experience. My most recent projects were related to <strong>COVID-19</strong> where I worked on bulding websites. One of the websites <strong>COVID 19 Testing Centers</a></strong> was released through a <strong><a href="https://telanganatoday.com/vnrvjiet-students-develop-covid-information-website" target="_blank">Press Conference</a></strong> in 7 newspapers in Telangana.  </p>
   </div>
 
 
@@ -100,7 +100,7 @@
        </div>
     </div>
 </div>
-        <h4 class="font-weight-bold text-center text-info"><i class="m-3  fas fa-code"></i> Programming</h4>
+        <h4 class="font-weight-bold text-center text-info"><i class="m-3  fas fa-code"></i> Programming and Databases</h4>
         <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
           <div>
             <!-- <i class="fab fa-python fa-5x"></i> -->
@@ -122,11 +122,19 @@
               <img src="https://img.icons8.com/color/96/000000/c-programming.png"/>
               <p class="text-center">C</p>
             </div>
+            <div>
+              <img width="96" height="96" src="https://img.icons8.com/color/96/mysql-logo.png" alt="mysql-logo"/>
+              <p class="text-center">MySQL</p>
+            </div>
+            <div>
+              <img width="96" height="96" src="https://img.icons8.com/color/96/mongodb.png" alt="mongodb"/>
+              <p class="text-center">MongoDB</p>
+            </div>
             
         </div>
         <div class="row">
           <div class="col-lg-6">
-            <h4 class="font-weight-bold text-center text-info"><i class="m-3 fas fa-chalkboard-teacher"></i>Machine Learning</h4>
+            <h4 class="font-weight-bold text-center text-info"><i class="m-3 fas fa-chalkboard-teacher"></i>Machine Learning and Deep Learning</h4>
             <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
               <!-- <div>
                 <i class="fab fa-angular fa-5x "></i>
@@ -136,8 +144,12 @@
               <div>
                 <!-- <img src="https://img.icons8.com/ios-filled/96/000000/learning.png"/> -->
                 <img src="https://img.icons8.com/doodle/96/000000/learning.png"/>
-                <p class="text-center">Machine Learning</p>
+                <!-- <p class="text-center">Machine Learning</p> -->
               </div>
+              <div>
+                <img width="96" height="96" src="https://img.icons8.com/external-becris-flat-becris/64/external-deep-learning-artificial-intelligence-becris-flat-becris.png" alt="external-deep-learning-artificial-intelligence-becris-flat-becris"/>
+              </div>
+              
           </div>
           </div>
           <div class="col-lg-6 border-left border-dark">
@@ -161,7 +173,7 @@
 
   <div class="container">
     <h2  class="mt-5 text-center " style="color:#0075f6">A bit more about me...</h2>
-    <p>I believe in leading a balanced professional and personal career. So apart from Programming and Development,I like Travelling which inturn leads to <strong>Exploration</strong>. I play Table tennis and passionate towards <strong>Photography</strong> and I watch movies and Cricket.</p>
+    <p>I believe in leading a balanced professional and personal career. Apart from programming and development, I enjoy traveling, which in turn leads to exploration. I also play table tennis and am passionate about photography. Additionally, I enjoy watching movies and cricket.</p>
   </div>
 
 
