Update Profile picture path

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
       <!-- My Picture -->
     <div class="container  my-5 text-center pt-5">
-      <img src="E:\Portfolio\SakethVangala-Portfolio\profile_pic_ncsu.jpg"  style="border-radius: 20px;width: 100%;max-width: 20rem;box-shadow:0px 2px 8px grey" alt="My Photo">
+      <img src="profile_pic_ncsu.jpg"  style="border-radius: 20px;width: 100%;max-width: 20rem;box-shadow:0px 2px 8px grey" alt="My Photo">
   </div>
 
   <!-- My Intro -->
